renamed instructions.md and added readme.md and refactored import statements

--- a/code/starter-code.ipynb
+++ b/code/starter-code.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +65,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from matplotlib.lines import Line2D\n",
+    "from matplotlib.patches import PathPatch\n",
+    "\n",
+    "import seaborn as sns\n",
+    "import re\n",
+    "import scipy.stats as stats\n",
+    "from numpy.random import randn\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -6268,15 +6275,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 125,
    "metadata": {},
    "outputs": [
@@ -6666,15 +6664,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 131,
    "metadata": {},
    "outputs": [],
@@ -6772,7 +6761,6 @@
     "# https://stackoverflow.com/questions/56838187/how-to-create-spacing-between-same-subgroup-in-seaborn-boxplot\n",
     "# https://stackoverflow.com/questions/31498850/set-space-between-boxplots-in-python-graphs-generated-nested-box-plots-with-seab\n",
     "\n",
-    "from matplotlib.patches import PathPatch\n",
     "\n",
     "def adjust_box_widths(g, fac):\n",
     "    \"\"\"\n",
@@ -7390,7 +7378,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib.lines import Line2D\n",
     "# Code\n",
     "def subplot_scatterplots_conditional(dataframe, list_of_column_pairs, list_of_titles, list_of_labels, fig_size, title):\n",
     "    num_subplots = len(list_of_column_pairs)\n",
@@ -7400,7 +7387,7 @@
     "#     ax = np.array(ax).reshape(-1) # use this when the configuration is set to 1 row and 1 column\n",
     "    \n",
     "    colors = {2017:'blue', 2018:'orange'}\n",
-    "    from numpy.random import randn\n",
+    "    \n",
     "\n",
     "    z = randn(10)\n",
     "    legend_elements = [\n",
@@ -8341,12 +8328,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code\n",
-    "import scipy.stats as stats"
+    "# Code"
    ]
   },
   {
