--- a/code/starter-code.ipynb
+++ b/code/starter-code.ipynb
@@ -2107,7 +2107,7 @@
    "source": [
     "|Feature|Type|Dataset|Description|\n",
     "|:---|:---|:---|:---|\n",
-    "|**state**|*category*|ACT/SAT 2017/2018|One of the states in America|\n",
+    "|**state**|*category*|act_2017, act_2018, sat_2017, sat_2018, final, combined_2017, combined_2018|One of the states in America|\n",
     "|**act_participation_201\\(7\\|8\\)**|*float*|ACT 2017/2018|Participation rate (real number from 0 to 1 in two decimal places, i.e. $\\mathbb{R} \\in [0,1]$)|\n",
     "|**act_english_201\\(7\\|8\\)**|*float*|ACT 2017/2018|Score for the ACT's English section (real number from 1 to 36 in two decimal places, i.e. $\\mathbb{R} \\in [1,36]$)|\n",
     "|**act_math_201\\(7\\|8\\)**|*float*|ACT 2017/2018|Score for the ACT's Math section (real number from 1 to 36 in two decimal places, i.e. $\\mathbb{R} \\in [1,36]$) |\n",
@@ -2115,9 +2115,9 @@
     "|**act_science_201\\(7\\|8\\)**|*float*|ACT 2017/2018|Score for the ACT's Science section (real number from 1 to 36 in two decimal places, i.e. $\\mathbb{R} \\in [1,36]$) |\n",
     "|**act_composite_201\\(7\\|8\\)**|*float*|ACT 2017/2018|Score for the ACT's Composite section (real number from 1 to 36 in two decimal places, i.e. $\\mathbb{R} \\in [1,36]$) |\n",
     "|**sat_participation_201\\(7\\|8\\)**|*float*|SAT 2017/2018|Participation rate (real number from 0 to 1 in two decimal places, i.e. $\\mathbb{R} \\in [0,1]$) |\n",
-    "|**sat_ebrw_201\\(7\\|8\\)**|*float*|SAT 2017/2018|Score for the SAT's Evidence-Based Reading and Writing section (real number from 1 to 36 in two decimal places, i.e. $\\mathbb{Z} \\in [200,800]$) |\n",
-    "|**sat_math_201\\(7\\|8\\)**|*float*|SAT 2017/2018|Score for the SAT's Math section (real number from 1 to 36 in two decimal places, i.e. $\\mathbb{Z} \\in [200,800]$) |\n",
-    "|**sat_total_201\\(7\\|8\\)**|*float*|SAT 2017/2018|Score for the SAT's Total (real number from 1 to 36 in two decimal places, i.e. $\\mathbb{Z} \\in [400,1600]$) |"
+    "|**sat_ebrw_201\\(7\\|8\\)**|*int*|SAT 2017/2018|Score for the SAT's Evidence-Based Reading and Writing section (real number from 1 to 36 in two decimal places, i.e. $\\mathbb{Z} \\in [200,800]$) |\n",
+    "|**sat_math_201\\(7\\|8\\)**|*int*|SAT 2017/2018|Score for the SAT's Math section (real number from 1 to 36 in two decimal places, i.e. $\\mathbb{Z} \\in [200,800]$) |\n",
+    "|**sat_total_201\\(7\\|8\\)**|*int*|SAT 2017/2018|Score for the SAT's Total (real number from 1 to 36 in two decimal places, i.e. $\\mathbb{Z} \\in [400,1600]$) |"
    ]
   },
   {
