added another line for conclusion in notebook

--- a/code/starter-code.ipynb
+++ b/code/starter-code.ipynb
@@ -8336,6 +8336,8 @@
    "source": [
     "Although the participation rates of either test are negatively correlated with each of the scores of the respective test's section, it does not suggest a causal relationship between these pairs of variables, specifically, reducing the scores by making the test more difficult for example would not necessarily result in an increase in the participation rates.\n",
     "\n",
+    "In fact, participation rates may influence scores. Higher participation rates of the SAT may be due to the state mandating SAT as the state examination. This in turn would lead to less academically inclined students taking the exam and lowering the mean scores.\n",
+    "\n",
     "Given that the participation rates are highest in states where the SAT is mandatory and paid for, the College Board could lobby the state government of North Dakota, which has the lowest SAT participation rates for both years and does not mandate either the ACT or SAT nor pays for either tests, to adopt the SAT as the state's compulsory examination for high-schoolers and perhaps even sponsor the test.  \n",
     "\n",
     "Additional data such as the universities within each state and the ranking of the universities throughout the U.S. might provide additional insight into the participation rate of either test as there may be individuals who take one test over the other with the intention of entering his/her desired college which may require either the SAT or the ACT. "
