--- a/code/starter-code.ipynb
+++ b/code/starter-code.ipynb
@@ -3689,7 +3689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -3994,7 +3994,7 @@
        "sat_2018_total          1098.00  1204.000  1298.0  "
       ]
      },
-     "execution_count": 155,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6049,7 +6049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -6112,7 +6112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6149,7 +6149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -6182,7 +6182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 107,
    "metadata": {
     "scrolled": true
    },
@@ -6222,7 +6222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -6283,7 +6283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6311,7 +6311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -6351,7 +6351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -6385,7 +6385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -6568,7 +6568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -6700,7 +6700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -6814,7 +6814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -7045,7 +7045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -7088,7 +7088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -7130,7 +7130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7142,7 +7142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -7221,7 +7221,7 @@
        "4  California               0.31  2017               0.53"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7232,7 +7232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7241,7 +7241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -7285,7 +7285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7334,7 +7334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -7343,7 +7343,7 @@
        "(102, 8)"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7356,7 +7356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -7367,7 +7367,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7378,7 +7378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -7422,7 +7422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -7431,7 +7431,7 @@
        "(102, 6)"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7443,7 +7443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -7452,7 +7452,7 @@
        "Index(['state', 'ebrw', 'math', 'year', 'participation', 'total'], dtype='object')"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7463,7 +7463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -7503,7 +7503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -7657,7 +7657,7 @@
        "[102 rows x 6 columns]"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7668,7 +7668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7679,7 +7679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -7723,11 +7723,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**SAT 2018 Participation Rates**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../images/choropleth-sat-2018-participation.png)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -7755,7 +7762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -8110,7 +8117,7 @@
        "kurt                -1.569003      -1.055118      -0.756126       -1.022725  "
       ]
      },
-     "execution_count": 152,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8187,7 +8194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: Statistical inference cannot be made as participation rate has been aggregated and we cannot tell the variance among cities within each state."
+    "Answer: Statistical inference cannot be made as participation rate has been aggregated. Hence, we cannot deduce the sampling variability which is needed to construct the confidence interval for statistical inference of the population parameter."
    ]
   },
   {
@@ -8217,7 +8224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -8226,7 +8233,7 @@
        "Ttest_indResult(statistic=-0.5499970052081805, pvalue=0.5835519913078013)"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
